Java version was switched to 8.